--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "react-emoji": "^0.5.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
