--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "npm start --prefix client",
     "server": "npm start --prefix server",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm run build --prefix client"
+   "install-client": "cd client && npm install",
+  "build": "npm run install-client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,9 @@
   "homepage": "https://github.com/Sparsh23210/Real-time-Chat-app#readme",
   "devDependencies": {
     "concurrently": "^8.0.0"
-  }
+  },
+  "engines": {
+  "node": "18.x"
+}
+
 }
